Fix issue#1 - invisible text in dark mode

--- a/email_notes.css
+++ b/email_notes.css
@@ -28,3 +28,11 @@
 .email_note .edit {
 	cursor: pointer;
 }
+
+.dark-mode .email_note .content {
+	color: #fff;
+}
+.dark-mode .email_note .edit {
+	fill: #fff;
+	stroke: #fff;
+}
